--- a/.github/workflows/setup-test-and-build.yml
+++ b/.github/workflows/setup-test-and-build.yml
@@ -8,8 +8,6 @@ on:
 jobs:
   setup:
     runs-on: ubuntu-latest
-    outputs:
-      artifact-name: deps
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -24,15 +22,22 @@ jobs:
           cd react
           yarn
 
-      - name: Upload dependencies
-        uses: actions/upload-artifact@v4
+  build:
+    needs: setup
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
         with:
-          name: deps
-          path: |
-            ./node_modules
-            ./react/node_modules
-            ./react/yarn.lock
-            ./react/lib/paybutton-config.json
+          fetch-depth: 0
+
+      - name: Build
+        run: |
+          yarn build
+
+      - name: Check TS declaration files
+        run: |
+          [[ -f react/dist/index.d.ts ]]
 
   test:
     needs: setup
@@ -43,33 +48,6 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Download dependencies
-        uses: actions/download-artifact@v4
-        with:
-          name: deps
-
       - name: Run react unit tests
-        run: |
-          yarn test
-
-  build:
-    needs: setup
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-
-      - name: Download dependencies
-        uses: actions/download-artifact@v4
-        with:
-          name: deps
-
-      - name: Build
-        run: yarn build
-
-      - name: Check TS declaration files
-        run: |
-          [[ -f react/dist/index.d.ts ]]
+        run: yarn test
 
