chore: fix Storybook issue by updating React and Storybook to v7.x
- Add React and React-DOM as devDependencies to fix 'Cannot find module react/package.json' error
- Update all Storybook packages from 6.5.x to 7.6.17 for better compatibility
- Modernize Storybook configuration to use @storybook/react-vite framework
- Update story files to use new Storybook 7.x format (StoryObj instead of Template pattern)
- Add Vite configuration for improved build performance
- Update Docker configuration to use npm and correct storybook command
- Remove deprecated @storybook/preset-create-react-app preset

Fixes #349

--- a/react/Dockerfile
+++ b/react/Dockerfile
@@ -3,8 +3,8 @@ FROM node:16-alpine
 WORKDIR /app
 
 COPY package*.json ./
-RUN yarn install && yarn build --ignore-scripts
+RUN npm install
 COPY . .
 
-CMD chown node: -R node_modules && yarn storybook
+CMD chown node: -R node_modules && npm run storybook
 
