--- a/react/package.json
+++ b/react/package.json
@@ -22,25 +22,25 @@
     "lint": "eslint 'lib/**/*.{ts,tsx}' --fix",
     "prettier": "prettier --write 'lib/**/*.ts'",
     "dev": "concurrently yarn:watch yarn:storybook",
-    "storybook": "start-storybook -p 6006",
+    "storybook": "storybook dev -p 6006",
     "watch": "microbundle watch --jsx React.createElement --no-compress --format modern,cjs",
     "test": "jest",
     "test:coverage": "jest --coverage"
   },
   "peerDependencies": {
-    "react": "17.0.0",
-    "react-dom": "17.0.0"
+    "react": "^17.0.0 || ^18.0.0",
+    "react-dom": "^17.0.0 || ^18.0.0"
   },
   "devDependencies": {
     "@babel/core": "7.18.9",
     "@popperjs/core": "2.11.5",
-    "@storybook/addon-a11y": "6.5.16",
-    "@storybook/addon-actions": "6.5.9",
-    "@storybook/addon-essentials": "6.5.16",
-    "@storybook/addon-links": "6.5.9",
-    "@storybook/node-logger": "6.5.9",
-    "@storybook/preset-create-react-app": "8.6.12",
-    "@storybook/react": "6.5.16",
+    "@storybook/addon-a11y": "^7.6.17",
+    "@storybook/addon-actions": "^7.6.17",
+    "@storybook/addon-essentials": "^7.6.17",
+    "@storybook/addon-links": "^7.6.17",
+    "@storybook/cli": "^7.6.17",
+    "@storybook/react": "^7.6.17",
+    "@storybook/react-vite": "^7.6.17",
     "@types/currency-formatter": "1.5.1",
     "@types/lodash": "4.14.182",
     "@types/node": "17.0.41",
@@ -49,6 +49,7 @@
     "@types/react-dom": "17.0.0",
     "@typescript-eslint/eslint-plugin": "2.34.0",
     "@typescript-eslint/parser": "2.34.0",
+    "@vitejs/plugin-react": "^4.6.0",
     "babel-eslint": "10.1.0",
     "babel-loader": "8.2.5",
     "concurrently": "5.3.0",
@@ -70,9 +71,13 @@
     "lint-staged": "10.5.4",
     "microbundle": "0.12.4",
     "prettier": "2.7.1",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
     "react-is": "16.13.1",
     "react-scripts": "5.0.1",
+    "storybook": "^7.6.17",
     "typescript": "^4.8.2",
+    "vite": "^4.4.5",
     "yarn-run-all": "^3.1.1"
   },
   "dependencies": {
