fix: ecashaddrjs resolution

--- a/react/tsconfig.json
+++ b/react/tsconfig.json
@@ -26,7 +26,8 @@
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true
+    "noEmit": true,
+    "types": ["node", "jest"]
   },
   "include": ["lib", "src"],
   "exclude": [
