--- a/paybutton/package.json
+++ b/paybutton/package.json
@@ -26,7 +26,8 @@
     "rollup-plugin-svg": "^2.0.0",
     "rollup-plugin-terser": "^7.0.0",
     "tslib": "^2.6.2",
-    "typescript": "^4.8.2"
+    "typescript": "^4.8.2",
+    "ecashaddrjs": "^2.0.0"
   },
   "scripts": {
     "dev": "rollup -c rollup.dev.js -w",
@@ -43,6 +44,7 @@
   "resolutions": {
     "@types/react": "17.0.0",
     "@types/react-dom": "17.0.0",
-    "readable-stream": "^3.5.0"
+    "readable-stream": "^3.5.0",
+    "ecashaddrjs": "^2.0.0"
   }
 }
