--- a/react/package.json
+++ b/react/package.json
@@ -44,6 +44,7 @@
     "@types/currency-formatter": "1.5.1",
     "@types/decimal.js": "^7.4.3",
     "@types/lodash": "4.14.182",
+    "@types/minimatch": "^6.0.0",
     "@types/node": "17.0.41",
     "@types/qrcode.react": "1.0.2",
     "@types/react": "17.0.0",
