Added TailwindCSS library (no styles applied).

--- a/react/package.json
+++ b/react/package.json
@@ -18,12 +18,14 @@
     "node": ">=10"
   },
   "scripts": {
-    "build": "tsc --p ./tsconfig-build.json && microbundle --jsx React.createElement --format modern,cjs",
+    "build": "npm run build:tailwind && tsc --p ./tsconfig-build.json && microbundle --jsx React.createElement --format modern,cjs",
+    "build:tailwind": "tailwindcss -i ./lib/styles/tailwind.css -o ./dist/tailwind.css --minify",
     "lint": "eslint 'lib/**/*.{ts,tsx}' --fix",
     "prettier": "prettier --write 'lib/**/*.ts'",
     "dev": "concurrently yarn:watch yarn:storybook",
     "storybook": "storybook dev -p 6006",
     "watch": "microbundle watch --jsx React.createElement --no-compress --format modern,cjs",
+    "watch:tailwind": "tailwindcss -i ./lib/styles/tailwind.css -o ./dist/tailwind.css --watch",
     "test": "jest",
     "test:coverage": "jest --coverage"
   },
@@ -50,6 +52,7 @@
     "@typescript-eslint/eslint-plugin": "2.34.0",
     "@typescript-eslint/parser": "2.34.0",
     "@vitejs/plugin-react": "^4.6.0",
+    "autoprefixer": "^10.4.0",
     "babel-eslint": "10.1.0",
     "babel-loader": "8.2.5",
     "concurrently": "5.3.0",
@@ -70,12 +73,14 @@
     "husky": "4.3.8",
     "lint-staged": "10.5.4",
     "microbundle": "0.12.4",
+    "postcss": "^8.4.0",
     "prettier": "2.7.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-is": "16.13.1",
     "react-scripts": "5.0.1",
     "storybook": "^7.6.17",
+    "tailwindcss": "^3.4.0",
     "typescript": "^4.8.2",
     "vite": "^4.4.5",
     "yarn-run-all": "^3.1.1"
