--- a/react/package.json
+++ b/react/package.json
@@ -11,19 +11,19 @@
   "files": [
     "dist"
   ],
-  "module": "dist/index.modern.js",
+  "module": "dist/esm/index.js",
   "main": "dist/index.js",
   "source": "index.tsx",
   "engines": {
     "node": ">=10"
   },
   "scripts": {
-    "build": "tsc --p ./tsconfig-build.json && microbundle --jsx React.createElement --format modern,cjs",
+    "build": "tsc --p ./tsconfig-build.json && tsc --p ./tsconfig-esm.json",
     "lint": "eslint 'lib/**/*.{ts,tsx}' --fix",
     "prettier": "prettier --write 'lib/**/*.ts'",
     "dev": "concurrently yarn:watch yarn:storybook",
     "storybook": "storybook dev -p 6006",
-    "watch": "microbundle watch --jsx React.createElement --no-compress --format modern,cjs",
+    "watch": "tsc --p ./tsconfig-build.json --watch",
     "test": "jest",
     "test:coverage": "jest --coverage"
   },
@@ -69,21 +69,24 @@
     "html-webpack-plugin": "^5.5.0",
     "husky": "4.3.8",
     "lint-staged": "10.5.4",
-    "microbundle": "0.12.4",
     "prettier": "2.7.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-is": "16.13.1",
     "react-scripts": "5.0.1",
     "storybook": "^7.6.17",
+    "tslib": "^2.6.2",
     "typescript": "^4.8.2",
     "vite": "^4.4.5",
     "yarn-run-all": "^3.1.1"
   },
   "dependencies": {
-    "@material-ui/core": "4.12.4",
-    "@material-ui/lab": "4.0.0-alpha.61",
-    "@material-ui/styles": "4.11.5",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/lab": "^6.0.0-beta.16",
+    "@mui/material": "^6.1.8",
+    "@mui/styles": "^6.5.0",
+    "@mui/system": "^6.1.8",
     "@types/crypto-js": "^4.2.1",
     "@types/jest": "^29.5.11",
     "axios": "1.6.5",
@@ -92,7 +95,7 @@
     "crypto-js": "^4.2.0",
     "jest": "^29.7.0",
     "lodash": "4.17.21",
-    "notistack": "1.0.10",
+    "notistack": "^3.0.1",
     "qrcode.react": "1.0.1",
     "react-jss": "10.10.0",
     "socket.io-client": "4.7.4",
