--- a/react/package.json
+++ b/react/package.json
@@ -88,6 +88,7 @@
     "@types/jest": "^29.5.11",
     "axios": "1.6.5",
     "bignumber.js": "9.0.2",
+    "cashtab-connect": "^1.1.0",
     "copy-to-clipboard": "3.3.3",
     "crypto-js": "^4.2.0",
     "jest": "^29.7.0",
