--- a/paybutton/package.json
+++ b/paybutton/package.json
@@ -4,20 +4,21 @@
   "description": "The easiest way to accept eCash online",
   "author": "",
   "main": "dist/paybutton.js",
+  "type": "module",
   "devDependencies": {
     "@paybutton/react": "link:../react",
-    "@rollup/plugin-alias": "^5.1.0",
-    "@rollup/plugin-commonjs": "^25.0.7",
-    "@rollup/plugin-html": "^1.0.3",
+    "@rollup/plugin-alias": "^5.1.1",
+    "@rollup/plugin-commonjs": "^28.0.1",
+    "@rollup/plugin-html": "^1.0.4",
     "@rollup/plugin-image": "^3.0.3",
     "@rollup/plugin-json": "^6.1.0",
-    "@rollup/plugin-node-resolve": "^15.2.3",
-    "@rollup/plugin-replace": "^5.0.5",
-    "@rollup/plugin-typescript": "^11.1.6",
+    "@rollup/plugin-node-resolve": "^15.3.0",
+    "@rollup/plugin-replace": "^6.0.1",
+    "@rollup/plugin-typescript": "^12.1.1",
     "camelcase": "^6.3.0",
     "ecashaddrjs": "^2.0.0",
     "preact": "^10.10.0",
-    "rollup": "^2.77.4-1",
+    "rollup": "^4.46.2",
     "rollup-plugin-cleanup": "^3.2.1",
     "rollup-plugin-dotenv": "^0.5.0",
     "rollup-plugin-livereload": "^2.0.0",
@@ -25,7 +26,7 @@
     "rollup-plugin-progress": "^1.1.2",
     "rollup-plugin-serve": "^2.0.0",
     "rollup-plugin-svg": "^2.0.0",
-    "rollup-plugin-terser": "^7.0.0",
+    "@rollup/plugin-terser": "^0.4.4",
     "tslib": "^2.6.2",
     "typescript": "^4.8.2"
   },
