--- a/paybutton/package.json
+++ b/paybutton/package.json
@@ -20,7 +20,7 @@
     "preact": "^10.10.0",
     "rollup": "^4.46.2",
     "rollup-plugin-cleanup": "^3.2.1",
-    "rollup-plugin-dotenv": "^0.5.0",
+    "rollup-plugin-dotenv": "^0.5.1",
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-node-polyfills": "^0.2.1",
     "rollup-plugin-progress": "^1.1.2",
@@ -47,5 +47,8 @@
     "@types/react-dom": "17.0.0",
     "readable-stream": "^3.5.0",
     "ecashaddrjs": "^2.0.0"
+    "webpack": "^5.0.0",
+    "@babel/plugin-syntax-flow": "^7.14.5",
+    "@babel/plugin-transform-react-jsx": "^7.14.9"
   }
 }
