--- a/react/package.json
+++ b/react/package.json
@@ -71,7 +71,7 @@
     "html-webpack-plugin": "^5.5.0",
     "husky": "4.3.8",
     "lint-staged": "10.5.4",
-    "microbundle": "0.12.4",
+    "microbundle": "^0.15.1",
     "prettier": "2.7.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
@@ -115,5 +115,8 @@
     "@types/react": "17.0.0",
     "@types/react-dom": "17.0.0",
     "chronik-client-cashtokens/ecashaddrjs": "^2.0.0"
+    "webpack": "^5.0.0",
+    "@babel/plugin-syntax-flow": "^7.14.5",
+    "@babel/plugin-transform-react-jsx": "^7.14.9"
   }
 }
