--- a/paybutton/package.json
+++ b/paybutton/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@paybutton/paybutton",
-  "version": "5.0.0",
+  "version": "5.0.1",
   "description": "The easiest way to accept eCash online",
   "author": "",
   "main": "dist/paybutton.js",
@@ -15,6 +15,7 @@
     "@rollup/plugin-replace": "^5.0.5",
     "@rollup/plugin-typescript": "^11.1.6",
     "camelcase": "^6.3.0",
+    "ecashaddrjs": "^2.0.0",
     "preact": "^10.10.0",
     "rollup": "^2.77.4-1",
     "rollup-plugin-cleanup": "^3.2.1",
@@ -26,8 +27,7 @@
     "rollup-plugin-svg": "^2.0.0",
     "rollup-plugin-terser": "^7.0.0",
     "tslib": "^2.6.2",
-    "typescript": "^4.8.2",
-    "ecashaddrjs": "^2.0.0"
+    "typescript": "^4.8.2"
   },
   "scripts": {
     "dev": "rollup -c rollup.dev.js -w",
