--- a/paybutton/package.json
+++ b/paybutton/package.json
@@ -46,7 +46,7 @@
     "@types/react": "17.0.0",
     "@types/react-dom": "17.0.0",
     "readable-stream": "^3.5.0",
-    "ecashaddrjs": "^2.0.0"
+    "ecashaddrjs": "^2.0.0",
     "webpack": "^5.0.0",
     "@babel/plugin-syntax-flow": "^7.14.5",
     "@babel/plugin-transform-react-jsx": "^7.14.9"
