--- a/react/package.json
+++ b/react/package.json
@@ -114,7 +114,7 @@
   "resolutions": {
     "@types/react": "17.0.0",
     "@types/react-dom": "17.0.0",
-    "chronik-client-cashtokens/ecashaddrjs": "^2.0.0"
+    "chronik-client-cashtokens/ecashaddrjs": "^2.0.0",
     "webpack": "^5.0.0",
     "@babel/plugin-syntax-flow": "^7.14.5",
     "@babel/plugin-transform-react-jsx": "^7.14.9"
