--- a/react/package.json
+++ b/react/package.json
@@ -41,6 +41,7 @@
     "@storybook/cli": "^7.6.17",
     "@storybook/react": "^7.6.17",
     "@storybook/react-vite": "^7.6.17",
+    "@testing-library/react": "^16.3.0",
     "@types/currency-formatter": "1.5.1",
     "@types/decimal.js": "^7.4.3",
     "@types/lodash": "4.14.182",
@@ -73,8 +74,8 @@
     "lint-staged": "10.5.4",
     "microbundle": "^0.15.1",
     "prettier": "2.7.1",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
+    "react": "18",
+    "react-dom": "18",
     "react-is": "16.13.1",
     "react-scripts": "5.0.1",
     "storybook": "^7.6.17",
