--- a/react/package.json
+++ b/react/package.json
@@ -28,8 +28,8 @@
     "test:coverage": "jest --coverage"
   },
   "peerDependencies": {
-    "react": "^17.0.0 || ^18.0.0",
-    "react-dom": "^17.0.0 || ^18.0.0"
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   },
   "devDependencies": {
     "@babel/core": "7.18.9",
@@ -47,9 +47,8 @@
     "@types/lodash": "4.14.182",
     "@types/minimatch": "^6.0.0",
     "@types/node": "17.0.41",
-    "@types/qrcode.react": "1.0.2",
-    "@types/react": "17.0.0",
-    "@types/react-dom": "17.0.0",
+    "@types/react": "18.3.26",
+    "@types/react-dom": "18.0.0",
     "@typescript-eslint/eslint-plugin": "8.39.1",
     "@typescript-eslint/parser": "8.39.1",
     "@vitejs/plugin-react": "^4.6.0",
@@ -84,9 +83,11 @@
     "yarn-run-all": "^3.1.1"
   },
   "dependencies": {
-    "@material-ui/core": "4.12.4",
-    "@material-ui/lab": "4.0.0-alpha.61",
-    "@material-ui/styles": "4.11.5",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/lab": "^7.0.1-beta.18",
+    "@mui/material": "^7.3.4",
+    "@mui/styles": "^6.4.8",
     "@types/crypto-js": "^4.2.1",
     "@types/jest": "^29.5.11",
     "axios": "1.12.0",
@@ -99,8 +100,8 @@
     "ecashaddrjs": "^2.0.0",
     "jest": "^29.7.0",
     "lodash": "4.17.21",
-    "notistack": "1.0.10",
-    "qrcode.react": "1.0.1",
+    "notistack": "3.0.0",
+    "qrcode.react": "3",
     "react-jss": "10.10.0",
     "socket.io-client": "4.7.4",
     "ts-jest": "^29.1.1",
@@ -113,11 +114,12 @@
     ]
   },
   "resolutions": {
-    "@types/react": "17.0.0",
-    "@types/react-dom": "17.0.0",
+    "@types/react": "18.3.26",
+    "@types/react-dom": "18.3.0",
     "chronik-client-cashtokens/ecashaddrjs": "^2.0.0",
     "webpack": "^5.0.0",
     "@babel/plugin-syntax-flow": "^7.14.5",
-    "@babel/plugin-transform-react-jsx": "^7.14.9"
+    "@babel/plugin-transform-react-jsx": "^7.14.9",
+    "jsdom": "20.0.3"
   }
 }
