--- a/paybutton/package.json
+++ b/paybutton/package.json
@@ -11,6 +11,7 @@
     "@rollup/plugin-commonjs": "^28.0.1",
     "@rollup/plugin-html": "^1.0.4",
     "@rollup/plugin-image": "^3.0.3",
+    "@rollup/plugin-inject": "^5.0.5",
     "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^15.3.0",
     "@rollup/plugin-replace": "^6.0.1",
