--- a/react/package.json
+++ b/react/package.json
@@ -70,6 +70,7 @@
     "eslint-plugin-standard": "4.1.0",
     "html-webpack-plugin": "^5.5.0",
     "husky": "4.3.8",
+    "jest-environment-jsdom": "^30.2.0",
     "lint-staged": "10.5.4",
     "microbundle": "^0.15.1",
     "prettier": "2.7.1",
