--- a/react/package.json
+++ b/react/package.json
@@ -43,6 +43,7 @@
     "@storybook/react-vite": "^7.6.17",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/currency-formatter": "1.5.1",
     "@types/decimal.js": "^7.4.3",
     "@types/lodash": "4.14.182",
