--- a/react/package.json
+++ b/react/package.json
@@ -56,6 +56,7 @@
     "@vitejs/plugin-react": "^4.6.0",
     "babel-eslint": "10.1.0",
     "babel-loader": "8.2.5",
+    "canvas": "^3.2.0",
     "concurrently": "5.3.0",
     "cross-env": "7.0.3",
     "currency-formatter": "1.5.9",
