Update to latest chronik-client
Drop the legacy chronik-client-cashtokens and use the latest chronik-client version.

Test Plan:
  yarn test

--- a/react/package.json
+++ b/react/package.json
@@ -95,7 +95,7 @@
     "axios": "1.12.0",
     "bignumber.js": "9.0.2",
     "cashtab-connect": "^1.1.0",
-    "chronik-client-cashtokens": "^3.4.0",
+    "chronik-client": "^4.1.0",
     "copy-to-clipboard": "3.3.3",
     "crypto-js": "^4.2.0",
     "decimal.js": "^10.6.0",
@@ -118,7 +118,7 @@
   "resolutions": {
     "@types/react": "18.3.26",
     "@types/react-dom": "18.3.0",
-    "chronik-client-cashtokens/ecashaddrjs": "^2.0.0",
+    "chronik-client/ecashaddrjs": "^2.0.0",
     "webpack": "^5.0.0",
     "@babel/plugin-syntax-flow": "^7.14.5",
     "@babel/plugin-transform-react-jsx": "^7.14.9",
